--- a/src/cdmi_examples.ipynb
+++ b/src/cdmi_examples.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,14 +87,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time now: 1713966115.589498\n"
+      "Time now: 1714127535.7090595\n"
      ]
     }
    ],
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
        "2019-09-01 01:00:00    0.13   0.196   0.524    1.39   0.199"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -760,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -845,14 +845,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Computation time: 18 mins\n"
+      "Computation time: 22 mins\n"
      ]
     }
    ],
@@ -860,7 +860,7 @@
     "# Calculate difference\n",
     "elapsed_time = end_time - start_time\n",
     "# Print elapsed time\n",
-    "print(\"Computation time:\", round(elapsed_time/60), \"mins\")"
+    "print(\"Computation time: \", round(elapsed_time/60), \"mins\")"
    ]
   },
   {
