--- a/src/cdmi_examples.ipynb
+++ b/src/cdmi_examples.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Causal Discovery in Multivariate Timeseries using CDMI\n",
+    "### CDMI: Causal Discovery in Multivariate Timeseries\n",
     "\n",
     "##### Notebook written by Wasim Ahmad <br> Computer Vision Group (CVG) <br> Friedrich Schiller University (FSU) Jena, Germany <br> Last updated on: April 19, 2024\n",
     "\n",
@@ -20,15 +20,6 @@
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tim_is_testing = 42"
    ]
   },
   {
